Criado getter de tipos de aula
