# Backend/routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 // use Illuminate\Http\Request;
+use App\Adapters\Http\Aulas\AulasControllerAdapter;
 use Illuminate\Support\Facades\Route;
 // use App\Adapters\Http\Controllers\PilatesController;
 
@@ -10,6 +11,12 @@ Route::get('/', function () {
 
 // Simple controller-backed hello endpoint
 // Route::get('/hello', [PilatesController::class, 'hello']);
+
+Route::get('/up', function() {
+    return response()->json(['status' => 'up']);
+});
+
+Route::get('/aulas/types', [AulasControllerAdapter::class, 'listAulasTypes']);
 
 require __DIR__.'/api/students.php';
 require __DIR__.'/api/instructors.php';
